plugins {
    id 'com.gradleup.shadow' version '9.3.1' apply false
}

allprojects {
    group = project.maven_group;
    version = project.version;

    repositories {
        mavenCentral();
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    apply plugin: "java-library";
    apply plugin: "maven-publish";
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(8);
        }
        withSourcesJar();
        withJavadocJar();
    }
    
    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8";
    }
}
